--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -200,11 +200,10 @@ variables:
 
   DATADOG_AGENT_EMBEDDED_PATH: /opt/datadog-agent/embedded
   DEB_GPG_KEY_ID: c0962c7d
-  DEB_GPG_TEST_KEY_ID: 58FB522F
   DEB_GPG_KEY_NAME: "Datadog, Inc. APT key"
   RPM_GPG_KEY_ID: b01082d3
-  RPM_GPG_TEST_KEY_ID: 58FB522F
   RPM_GPG_KEY_NAME: "Datadog, Inc. RPM key"
+  GPG_TEST_KEY_ID: 58FB522F
   DOCKER_REGISTRY_URL: docker.io
   KITCHEN_INFRASTRUCTURE_FLAKES_RETRY: 2
   CLANG_LLVM_VER: 12.0.1
@@ -231,6 +230,7 @@ variables:
   RPM_SIGNING_PASSPHRASE: ci.datadog-agent.rpm_signing_key_passphrase_${RPM_GPG_KEY_ID}  # agent-delivery
   VCPKG_BLOB_SAS_URL: ci.datadog-agent-buildimages.vcpkg_blob_sas_url  # windows-agent
   WINGET_PAT: ci.datadog-agent.winget_pat  # windows-agent
+  TEST_GPG_KEY: ci.datadog-agent.test-key-${GPG_TEST_KEY_ID}
   # End aws ssm variables
 
   # Start vault variables
