rename config to indicate linux usage

--- a/test/new-e2e/tests/process/config/process_check_in_core_agent_wlm_process_collector.yaml
+++ b/test/new-e2e/tests/process/config/process_check_in_core_agent_wlm_process_collector.yaml
@@ -1,7 +1,7 @@
 process_config:
   process_collection:
     enabled: true
-    use_wlm: true
+    linux_use_wlm: true
   container_collection:
     enabled: false
   process_discovery:
