expand exceptions to run regression-detector
Signed-off-by: Brian L. Troutwine <brian.troutwine@datadoghq.com>

--- a/.gitlab/functional_test/regression_detector.yml
+++ b/.gitlab/functional_test/regression_detector.yml
@@ -75,6 +75,15 @@ single-machine-performance-regression_detector:
     - changes:
         - "**/*.md"
         - "**/*_test.go"
+        - "docs/**/*"
+        - "README*"
+        - ".vscode/**/*"
+        - "examples/**/*"
+        - "LICENSE*"
+        - "NOTICE*"
+        - "CHANGELOG*"
+        - "releasenotes/**/*"
+        - "releasenotes-dca/**/*"
       when: never
     - when: on_success
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/docker_x64$CI_IMAGE_DOCKER_X64_SUFFIX:$CI_IMAGE_DOCKER_X64
