dyninst/actuator: make unloading async
This is really about better coordinating the life-cycle of the sink.
This fixes a bug where we would previously leak sinks in the map in the
actuator.

--- a/pkg/dyninst/actuator/testdata/snapshot/process_removed_during_loading_failed.yaml
+++ b/pkg/dyninst/actuator/testdata/snapshot/process_removed_during_loading_failed.yaml
@@ -1,6 +1,5 @@
 # Tests process removal while program is loading. The program should be marked
-# as aborted. Since loading doesn't have a completion event in our test framework,
-# we'll test the removal during loading state.
+# as aborted and then gone.
 - !processes-updated
   updated:
     - process_id: {pid: 1001}
