--- a/pkg/dyninst/actuator/testdata/snapshot/process_removed_during_loading_success.yaml
+++ b/pkg/dyninst/actuator/testdata/snapshot/process_removed_during_loading_success.yaml
@@ -1,13 +1,13 @@
-# Tests compilation failure. The process should move to CompilationFailed state
-# and the program should be cleaned up.
+# Tests process removal while program is loading. The program should be marked
+# as aborted, but then unloaded.
 - !processes-updated
   updated:
     - process_id: {pid: 1001}
       executable: {path: /usr/bin/test}
       probes:
         - {type: LOG_PROBE, id: probe1, where: {methodName: main}, captureSnapshot: true}
+- !processes-updated {removed: [1001]} 
 - !loaded {program_id: 1}
-- !attaching-failed {program_id: 1, process_id: 1001, error: "eBPF attaching failed"}
 - !unloaded {program_id: 1}
 ---
 event: !processes-updated
@@ -26,33 +26,31 @@ state:
   programs:
     1: <nil> -> Loading (proc 1001)
 ---
+event: !processes-updated {removed: [1001]}
+state:
+  currently_loading: "1"
+  queued_programs: '[]'
+  processes:
+    1001: WaitingForProgram (prog 1)
+  programs:
+    1: Loading (proc 1001) -> LoadingAborted (proc 1001)
+---
 event: !loaded {program_id: 1}
 effects:
-  - !attach-to-process {executable: /usr/bin/test@0.0m0.0, process_id: 1001, program_id: 1}
+  - !unload-program {program_id: 1}
 state:
   currently_loading: 1 -> <nil>
   queued_programs: '[]'
   processes:
-    1001: WaitingForProgram (prog 1) -> Attaching (prog 1)
+    1001: WaitingForProgram (prog 1)
   programs:
-    1: Loading (proc 1001) -> Loaded (proc 1001)
----
-event: !attaching-failed {program_id: 1, process_id: 1001, error: "eBPF attaching failed"}
-effects:
-  - !unload-program {program_id: 1}
-state:
-  currently_loading: <nil>
-  queued_programs: '[]'
-  processes:
-    1001: Attaching (prog 1) -> LoadingFailed (prog 1)
-  programs:
-    1: Loaded (proc 1001) -> Unloading (proc 1001)
+    1: LoadingAborted (proc 1001) -> Unloading (proc 1001)
 ---
 event: !unloaded {program_id: 1}
 state:
   currently_loading: <nil>
   queued_programs: '[]'
   processes:
-    1001: LoadingFailed (prog 1) -> LoadingFailed
+    1001: WaitingForProgram (prog 1) -> <nil>
   programs:
     1: Unloading (proc 1001) -> <nil>
