--- a/.gitlab/e2e_testing_deploy/e2e_deploy.yml
+++ b/.gitlab/e2e_testing_deploy/e2e_deploy.yml
@@ -2,16 +2,25 @@
 # e2e_deploy stage
 # Contains jobs which deploy Agent package to testing repsoitories that are used in e2e tests.
 
-.setup_rpm_test_signing_key: &setup_rpm_test_signing_key
-  - printf -- "$($CI_PROJECT_DIR/tools/ci/fetch_secret.sh $TEST_GPG_KEY)" | gpg --import --batch
-  - EXIT="${PIPESTATUS[0]}"; if [ $EXIT -ne 0 ]; then echo "Unable to locate credentials needs gitlab runner restart"; exit $EXIT; fi
+.setup_signing: &setup_signing
+  - aws s3 cp s3://binaries-ddbuild-io-prod/dd-source/domains/seceng/sit/apps/artifact-security/vault-gpg-client/gpg-vault/dev/gpg-vault-v1.2.3-linux-amd64.tar.gz .
+  - tar -xzf gpg-vault-v1.2.3-linux-amd64.tar.gz
+  - mv gpg-vault-linux-amd64 /usr/bin/gpg-vault-bin
 
-.setup_apt_test_signing_key: &setup_apt_test_signing_key
-  - printf -- "$($CI_PROJECT_DIR/tools/ci/fetch_secret.sh $TEST_GPG_KEY)" | gpg --import --batch
-  - EXIT="${PIPESTATUS[0]}"; if [ $EXIT -ne 0 ]; then echo "Unable to locate credentials needs gitlab runner restart"; exit $EXIT; fi
+  # Set up gpg shim
+  - echo '#!/bin/bash' > /usr/bin/gpg
+  - echo 'GPG_VAULT_COMPAT_MODE=true GPG_USER_ID="Datadog Packages" GPG_USER_EMAIL="package@datadoghq.com" GPG_KEY_DATE="2025-06-11T00:00:00Z" /usr/bin/gpg-vault $@' >> /usr/bin/gpg
+  - chmod +x /usr/bin/gpg
 
-.setup_signing_keys_package:
-  &setup_signing_keys_package # Set up prod apt repo to get the datadog-signing-keys package
+  # Set up gpg-vault shim
+  - echo '#!/bin/bash' > /usr/bin/gpg-vault
+  - echo 'GPG_USER_ID="Datadog Packages" GPG_USER_EMAIL="package@datadoghq.com" GPG_KEY_DATE="2025-06-11T00:00:00Z" /usr/bin/gpg-vault-bin $@' >> /usr/bin/gpg-vault
+  - chmod +x /usr/bin/gpg-vault
+
+# TODO maybe: add an empty "datadog-signing-keys" package to the pool,
+# this may be simpler and it should not break the tests
+# because this package is only used when updating the signing key using apt-get update
+.setup_signing_keys_package: &setup_signing_keys_package # Set up prod apt repo to get the datadog-signing-keys package
   - echo 'deb [signed-by=/usr/share/keyrings/datadog-archive-keyring.gpg] https://apt.datadoghq.com/ stable 7' > /etc/apt/sources.list.d/datadog.list
   - touch /usr/share/keyrings/datadog-archive-keyring.gpg
   - chmod a+r /usr/share/keyrings/datadog-archive-keyring.gpg
@@ -57,11 +66,8 @@ deploy_deb_testing-a7_x64:
       "lint_linux-x64",
     ]
   script:
-    - *setup_apt_test_signing_key
-    - set +x # make sure we don't output the creds to the build log
-
+    - *setup_signing
     - *setup_signing_keys_package
-
     - deb-s3 upload -c "pipeline-$DD_PIPELINE_ID-x86_64" -m 7 -b $DEB_TESTING_S3_BUCKET -a amd64 --sign=$GPG_TEST_KEY_ID --gpg_options="--batch --digest-algo SHA512" --preserve_versions --visibility public $OMNIBUS_PACKAGE_DIR/datadog-*_7*amd64.deb
     - deb-s3 upload -c "pipeline-$DD_PIPELINE_ID-x86_64" -m 7 -b $DEB_TESTING_S3_BUCKET -a x86_64 --sign=$GPG_TEST_KEY_ID --gpg_options="--batch --digest-algo SHA512" --preserve_versions --visibility public $OMNIBUS_PACKAGE_DIR/datadog-*_7*amd64.deb
     - deb-s3 upload -c "pipeline-$DD_PIPELINE_ID-x86_64" -m 7 -b $DEB_TESTING_S3_BUCKET -a amd64 --sign=$GPG_TEST_KEY_ID --gpg_options="--batch --digest-algo SHA512" --preserve_versions --visibility public $OMNIBUS_PACKAGE_DIR/datadog-signing-keys_${DD_PIPELINE_ID}.deb
@@ -76,11 +82,8 @@ deploy_deb_testing-a7_arm64:
     - .deploy_deb_testing-a7
   needs: ["installer_deb-arm64", "agent_deb-arm64-a7", "agent_deb-arm64-a7-fips", "lint_linux-arm64"]
   script:
-    - *setup_apt_test_signing_key
-    - set +x # make sure we don't output the creds to the build log
-
+    - *setup_signing
     - *setup_signing_keys_package
-
     - deb-s3 upload -c "pipeline-$DD_PIPELINE_ID-arm64" -m 7 -b $DEB_TESTING_S3_BUCKET -a arm64 --sign=$GPG_TEST_KEY_ID --gpg_options="--batch --digest-algo SHA512" --preserve_versions --visibility public $OMNIBUS_PACKAGE_DIR/datadog-*_7*arm64.deb
     - deb-s3 upload -c "pipeline-$DD_PIPELINE_ID-arm64" -m 7 -b $DEB_TESTING_S3_BUCKET -a arm64 --sign=$GPG_TEST_KEY_ID --gpg_options="--batch --digest-algo SHA512" --preserve_versions --visibility public $OMNIBUS_PACKAGE_DIR/datadog-signing-keys_${DD_PIPELINE_ID}.deb
 
@@ -110,8 +113,7 @@ deploy_rpm_testing-a7_x64:
       "lint_linux-x64",
     ]
   script:
-    - *setup_rpm_test_signing_key
-    - set +x
+    - *setup_signing
     - echo "" | python2 /opt/rpm-s3/bin/rpm-s3 --verbose --visibility public-read -c "https://s3.amazonaws.com" -b $RPM_TESTING_S3_BUCKET -p "testing/pipeline-$DD_PIPELINE_ID/7/x86_64/" -a "x86_64" --sign --metadata-signing-key $TEST_GPG_KEY_ID $OMNIBUS_PACKAGE_DIR/datadog-*-7.*x86_64.rpm
 
 deploy_rpm_testing-a7_arm64:
@@ -123,7 +125,7 @@ deploy_rpm_testing-a7_arm64:
     - .deploy_rpm_testing-a7
   needs: ["installer_rpm-arm64", "agent_rpm-arm64-a7", "agent_rpm-arm64-a7-fips", "lint_linux-arm64"]
   script:
-    - *setup_rpm_test_signing_key
+    - *setup_signing
     - echo "" | python2 /opt/rpm-s3/bin/rpm-s3 --verbose --visibility public-read -c "https://s3.amazonaws.com" -b $RPM_TESTING_S3_BUCKET -p "testing/pipeline-$DD_PIPELINE_ID/7/aarch64/" -a "aarch64" --sign --metadata-signing-key $TEST_GPG_KEY_ID $OMNIBUS_PACKAGE_DIR/datadog-*-7.*aarch64.rpm
 
 deploy_suse_rpm_testing_x64-a7:
