--- a/pkg/fleet/installer/packages/embedded/templates/gen/debrpm/datadog-agent-ddot.service
+++ b/pkg/fleet/installer/packages/embedded/templates/gen/debrpm/datadog-agent-ddot.service
@@ -1,4 +1,4 @@
-f[Unit]
+[Unit]
 Description=Datadog Distribution of OpenTelemetry Collector
 After=datadog-agent.service datadog-agent-exp.service
 BindsTo=datadog-agent.service
