--- a/pkg/fleet/installer/packages/embedded/templates/gen/oci/datadog-agent-ddot-exp.service
+++ b/pkg/fleet/installer/packages/embedded/templates/gen/oci/datadog-agent-ddot-exp.service
@@ -1,4 +1,4 @@
-f[Unit]
+[Unit]
 Description=Datadog Distribution of OpenTelemetry Collector Experiment
 After=datadog-agent.service datadog-agent-exp.service
 BindsTo=datadog-agent-exp.service
