--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -190,8 +190,8 @@ variables:
   CI_IMAGE_RPM_ARM64_SUFFIX: "_test_only"
   CI_IMAGE_RPM_ARMHF: v70035524-a857940f
   CI_IMAGE_RPM_ARMHF_SUFFIX: "_test_only"
-  CI_IMAGE_WIN_LTSC2022_X64: v68287210-66c494d7
-  CI_IMAGE_WIN_LTSC2022_X64_SUFFIX: ""
+  CI_IMAGE_WIN_LTSC2022_X64: v70035524-a857940f
+  CI_IMAGE_WIN_LTSC2022_X64_SUFFIX: "_test_only"
 
   DATADOG_AGENT_EMBEDDED_PATH: /opt/datadog-agent/embedded
   DEB_GPG_KEY_ID: c0962c7d
