refactor: move the submission of metrics in the shared library check; remove everything related to payload in Rust and RTLoader API

--- a/pkg/collector/rustcheck/Cargo.toml
+++ b/pkg/collector/rustcheck/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+libloading = "0.8.8"
 
 [lib]
-crate-type = ["dylib"]
+crate-type = ["cdylib"]
