--- a/test/regression/cases/quality_gate_metrics/experiment.yaml
+++ b/test/regression/cases/quality_gate_metrics/experiment.yaml
@@ -3,8 +3,8 @@ erratic: false
 
 target:
   name: datadog-agent
-  cpu_allotment: 4
-  memory_allotment: 2GiB
+  cpu_allotment: 1.5
+  memory_allotment: 1.5 GiB
 
   environment:
     DD_API_KEY: a0000001
@@ -30,19 +30,25 @@ checks:
     description: "Memory usage quality gate. This puts a bound on the total collector memory usage."
     bounds:
       series: total_pss_bytes
-      upper_bound: 2 GiB
+      upper_bound: 887 MiB
 
   - name: cpu_usage
     description: "CPU usage quality gate. This puts a bound on the total average collector millicore usage."
     bounds:
       series: avg(total_cpu_usage_millicores)
-      upper_bound: 2750
+      upper_bound: 982
 
   - name: intake_connections
     description: "Connections established to intake APIs. This puts a bound on total connections per Agent instance."
     bounds:
       series: "connection.current"
       upper_bound: 6
+
+  - name: lost_bytes
+    description: "Allowable bytes not processed by Agent"
+    bounds:
+      series: lost_bytes
+      upper_bound: 0KiB
 
 report_links:
   - text: "bounds checks dashboard"
