--- a/.gitlab/install_script_testing/install_script_testing.yml
+++ b/.gitlab/install_script_testing/install_script_testing.yml
@@ -15,4 +15,4 @@ test_install_script:
       --variable TEST_PIPELINE_ID"
   needs: ["deploy_deb_testing-a7_x64", "deploy_rpm_testing-a7_x64", "deploy_suse_rpm_testing_x64-a7"]
   rules:
-    - when: on_success 
+    - !reference [.on_deploy]
