--- a/pkg/fleet/installer/packages/embedded/templates/gen/debrpm/datadog-agent-ddot.service
+++ b/pkg/fleet/installer/packages/embedded/templates/gen/debrpm/datadog-agent-ddot.service
@@ -12,7 +12,7 @@ User=dd-agent
 Restart=on-failure
 EnvironmentFile=-/etc/datadog-agent/environment
 Environment="DD_FLEET_POLICIES_DIR=/etc/datadog-agent/managed/datadog-agent/stable"
-ExecStart=/opt/datadog-agent/embedded/bin/otel-agent --config /etc/datadog-agent/datadog.yaml --pidfile /opt/datadog-agent/run/otel-agent.pid
+ExecStart=/opt/datadog-agent/embedded/bin/otel-agent --config /etc/otel-agent/otel-config.yaml --core-config /etc/datadog-agent/datadog.yaml --pidfile /opt/datadog-agent/run/otel-agent.pid
 StartLimitInterval=10
 StartLimitBurst=5
 
