--- a/test/static/static_quality_gates.yml
+++ b/test/static/static_quality_gates.yml
@@ -46,30 +46,30 @@ static_quality_gate_docker_agent_jmx_amd64:
 static_quality_gate_docker_agent_jmx_arm64:
   max_on_disk_size: 980.54 MiB
   max_on_wire_size: 324.2 MiB
-static_quality_gate_docker_agent_windows1809:
-  max_on_disk_size: 1190.61 MiB
-  max_on_wire_size: 420.48 MiB
-static_quality_gate_docker_agent_windows1809_core:
-  max_on_disk_size: 5920.75 MiB
-  max_on_wire_size: 2048.95 MiB
-static_quality_gate_docker_agent_windows1809_core_jmx:
-  max_on_disk_size: 6042.32 MiB
-  max_on_wire_size: 2048.95 MiB
-static_quality_gate_docker_agent_windows1809_jmx:
-  max_on_disk_size: 1312.42 MiB
-  max_on_wire_size: 462.77 MiB
-static_quality_gate_docker_agent_windows2022:
-  max_on_disk_size: 1209.9 MiB
-  max_on_wire_size: 433.24 MiB
-static_quality_gate_docker_agent_windows2022_core:
-  max_on_disk_size: 5893.81 MiB
-  max_on_wire_size: 2048.95 MiB
-static_quality_gate_docker_agent_windows2022_core_jmx:
-  max_on_disk_size: 6015.45 MiB
-  max_on_wire_size: 2048.95 MiB
-static_quality_gate_docker_agent_windows2022_jmx:
-  max_on_disk_size: 1331.48 MiB
-  max_on_wire_size: 475.53 MiB
+# static_quality_gate_docker_agent_windows1809:
+#   max_on_disk_size: 1190.61 MiB
+#   max_on_wire_size: 420.48 MiB
+# static_quality_gate_docker_agent_windows1809_core:
+#   max_on_disk_size: 5920.75 MiB
+#   max_on_wire_size: 2048.95 MiB
+# static_quality_gate_docker_agent_windows1809_core_jmx:
+#   max_on_disk_size: 6042.32 MiB
+#   max_on_wire_size: 2048.95 MiB
+# static_quality_gate_docker_agent_windows1809_jmx:
+#   max_on_disk_size: 1312.42 MiB
+#   max_on_wire_size: 462.77 MiB
+# static_quality_gate_docker_agent_windows2022:
+#   max_on_disk_size: 1209.9 MiB
+#   max_on_wire_size: 433.24 MiB
+# static_quality_gate_docker_agent_windows2022_core:
+#   max_on_disk_size: 5893.81 MiB
+#   max_on_wire_size: 2048.95 MiB
+# static_quality_gate_docker_agent_windows2022_core_jmx:
+#   max_on_disk_size: 6015.45 MiB
+#   max_on_wire_size: 2048.95 MiB
+# static_quality_gate_docker_agent_windows2022_jmx:
+#   max_on_disk_size: 1331.48 MiB
+#   max_on_wire_size: 475.53 MiB
 static_quality_gate_docker_cluster_agent_amd64:
   max_on_disk_size: 214.5 MiB
   max_on_wire_size: 73.51 MiB
