feat: add example of an http request in shared library rust code using reqwest

--- a/pkg/collector/sharedlibrary/httpcheck/Cargo.toml
+++ b/pkg/collector/sharedlibrary/httpcheck/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 libloading = "0.8.8"
+reqwest = { version = "0.12", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
 
 [lib]
 crate-type = ["cdylib"]
