--- a/.gitlab/common/test_infra_version.yml
+++ b/.gitlab/common/test_infra_version.yml
@@ -5,5 +5,5 @@
 
 ---
 variables:
-  TEST_INFRA_DEFINITIONS_BUILDIMAGES: 7cdc477d053f
-  TEST_INFRA_DEFINITIONS_BUILDIMAGES_SUFFIX: ''
+  TEST_INFRA_DEFINITIONS_BUILDIMAGES: 042266ee2e61
+  TEST_INFRA_DEFINITIONS_BUILDIMAGES_SUFFIX: -dev
