feat: check() method in shared library checks now returns a result to handle errors

--- a/pkg/collector/sharedlibrary/httpcheck/Cargo.toml
+++ b/pkg/collector/sharedlibrary/httpcheck/Cargo.toml
@@ -5,8 +5,9 @@ edition = "2024"
 
 [dependencies]
 libloading = "0.8.8"
-reqwest = { version = "0.12", features = ["json"] }
-tokio = { version = "1", features = ["full"] }
+reqwest = { version = "0.12", features = ["json", "blocking"] }
+serde = { version = "1.0", features = ["derive"] }
+
 
 [lib]
 crate-type = ["cdylib"]
