--- a/pkg/collector/sharedlibrary/httpcheck/Cargo.toml
+++ b/pkg/collector/sharedlibrary/httpcheck/Cargo.toml
@@ -5,9 +5,7 @@ edition = "2024"
 
 [dependencies]
 libloading = "0.8.8"
-reqwest = { version = "0.12", features = ["json", "blocking"] }
-serde = { version = "1.0", features = ["derive"] }
-
+reqwest = { version = "0.12", features = ["blocking"] }
 
 [lib]
 crate-type = ["cdylib"]
