--- a/.gitlab/packaging/oci.yml
+++ b/.gitlab/packaging/oci.yml
@@ -87,3 +87,9 @@ installer_oci:
   needs: ["installer-arm64-oci", "installer-amd64-oci", "windows-installer-amd64", "go_tools_deps"]
   variables:
     OCI_PRODUCT: "datadog-installer"
+
+ddot_oci:
+  extends: .package_oci
+  needs: ["datadog-otel-agent-x64", "datadog-otel-agent-arm64", "go_tools_deps"]
+  variables:
+    OCI_PRODUCT: "datadog-agent-ddot"
