use a proper see length for logs generator
Signed-off-by: Brian L. Troutwine <brian.troutwine@datadoghq.com>

--- a/test/regression/cases/quality_gate_metrics/lading/lading.yaml
+++ b/test/regression/cases/quality_gate_metrics/lading/lading.yaml
@@ -49,7 +49,8 @@ generator:
   # Log rotation file system for logs collection (following quality_gate_logs pattern)
   - file_gen:
       logrotate_fs:
-        seed: [137, 139, 149, 151, 157, 163, 167, 173, 179, 181, 191, 193]
+        seed: [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53,
+               59, 61, 67, 71, 73, 79, 83, 89, 97, 101, 103, 107, 109, 113, 127, 131]
         load_profile:
           constant: 500KiB
         concurrent_logs: 2
