--- a/.gitlab/e2e_testing_deploy/e2e_deploy.yml
+++ b/.gitlab/e2e_testing_deploy/e2e_deploy.yml
@@ -3,18 +3,18 @@
 # Contains jobs which deploy Agent package to testing repsoitories that are used in e2e tests.
 
 .setup_signing: &setup_signing
-  - aws s3 cp s3://binaries-ddbuild-io-prod/dd-source/domains/seceng/sit/apps/artifact-security/vault-gpg-client/gpg-vault/dev/gpg-vault-v1.2.3-linux-amd64.tar.gz .
-  - tar -xzf gpg-vault-v1.2.3-linux-amd64.tar.gz
+  - aws s3 cp s3://binaries-ddbuild-io-prod/dd-source/domains/seceng/sit/apps/artifact-security/vault-gpg-client/gpg-vault/dev/gpg-vault-v1.5.0-linux-amd64.tar.gz .
+  - tar -xzf gpg-vault-v1.5.0-linux-amd64.tar.gz
   - mv gpg-vault-linux-amd64 /usr/bin/gpg-vault-bin
 
   # Set up gpg shim
   - echo '#!/bin/bash' > /usr/bin/gpg
-  - echo 'GPG_VAULT_COMPAT_MODE=true GPG_USER_ID="Datadog Packages" GPG_USER_EMAIL="package@datadoghq.com" GPG_KEY_DATE="2025-06-11T00:00:00Z" /usr/bin/gpg-vault $@' >> /usr/bin/gpg
+  - echo 'GPG_VAULT_COMPAT_MODE=true GPG_USER_ID="Datadog Packages" GPG_USER_EMAIL="package@datadoghq.com" /usr/bin/gpg-vault $@' >> /usr/bin/gpg
   - chmod +x /usr/bin/gpg
 
   # Set up gpg-vault shim
   - echo '#!/bin/bash' > /usr/bin/gpg-vault
-  - echo 'GPG_USER_ID="Datadog Packages" GPG_USER_EMAIL="package@datadoghq.com" GPG_KEY_DATE="2025-06-11T00:00:00Z" /usr/bin/gpg-vault-bin $@' >> /usr/bin/gpg-vault
+  - echo 'GPG_USER_ID="Datadog Packages" GPG_USER_EMAIL="package@datadoghq.com" /usr/bin/gpg-vault-bin $@' >> /usr/bin/gpg-vault
   - chmod +x /usr/bin/gpg-vault
 
 # TODO maybe: add an empty "datadog-signing-keys" package to the pool,
