--- a/.gitlab/e2e/e2e.yml
+++ b/.gitlab/e2e/e2e.yml
@@ -164,32 +164,32 @@ go_e2e_test_binaries:
     - qa_dca
     - qa_dogstatsd
 
-# new-e2e-containers:
-#   extends:
-#     - .new_e2e_template_needs_container_deploy
-#   # TODO once images are deployed to ECR for dev branches, update
-#   #.on_main_or_rc_and_no_skip_e2e adding on_dev_branch_manual rules
-#   # and move rules to template
-#   rules:
-#     - !reference [.on_container_or_e2e_changes]
-#     - !reference [.manual]
-#   variables:
-#     TARGETS: ./tests/containers
-#     TEAM: container-integrations
-#     ON_NIGHTLY_FIPS: "true"
-#   parallel:
-#     matrix:
-#       # Temporarily disable old version of Kubernetes
-#       # On this version, the reported kubernetes CPU usage appears to be significantly off
-#       - EXTRA_PARAMS: "--run TestKindSuite -c ddinfra:kubernetesVersion=1.19"
-#       - EXTRA_PARAMS: "--run TestKindSuite -c ddinfra:kubernetesVersion=1.22"
-#       - EXTRA_PARAMS: "--run TestKindSuite -c ddinfra:kubernetesVersion=1.27"
-#       - EXTRA_PARAMS: "--run TestKindSuite -c ddinfra:kubernetesVersion=1.29"
-#       - EXTRA_PARAMS: "--run TestKindSuite -c ddinfra:osDescriptor=ubuntu:20.04"
-#       - EXTRA_PARAMS: "--run TestKindSuite -c ddinfra:osDescriptor=ubuntu:22.04"
-#       - EXTRA_PARAMS: --run TestECSSuite
-#       - EXTRA_PARAMS: --run TestDockerSuite
-#       - EXTRA_PARAMS: --skip "Test(Kind|EKS|ECS|Docker)Suite"
+new-e2e-containers:
+  extends:
+    - .new_e2e_template_needs_container_deploy
+  # TODO once images are deployed to ECR for dev branches, update
+  #.on_main_or_rc_and_no_skip_e2e adding on_dev_branch_manual rules
+  # and move rules to template
+  rules:
+    - !reference [.on_container_or_e2e_changes]
+    - !reference [.manual]
+  variables:
+    TARGETS: ./tests/containers
+    TEAM: container-integrations
+    ON_NIGHTLY_FIPS: "true"
+  parallel:
+    matrix:
+      # Temporarily disable old version of Kubernetes
+      # On this version, the reported kubernetes CPU usage appears to be significantly off
+      - EXTRA_PARAMS: "--run TestKindSuite -c ddinfra:kubernetesVersion=1.19"
+      - EXTRA_PARAMS: "--run TestKindSuite -c ddinfra:kubernetesVersion=1.22"
+      - EXTRA_PARAMS: "--run TestKindSuite -c ddinfra:kubernetesVersion=1.27"
+      - EXTRA_PARAMS: "--run TestKindSuite -c ddinfra:kubernetesVersion=1.29"
+      - EXTRA_PARAMS: "--run TestKindSuite -c ddinfra:osDescriptor=ubuntu:20.04"
+      - EXTRA_PARAMS: "--run TestKindSuite -c ddinfra:osDescriptor=ubuntu:22.04"
+      - EXTRA_PARAMS: --run TestECSSuite
+      - EXTRA_PARAMS: --run TestDockerSuite
+      - EXTRA_PARAMS: --skip "Test(Kind|EKS|ECS|Docker)Suite"
 
 new-e2e-containers-eks-init:
   stage: e2e_init
