Add export_testing_public_key manual job

--- a/.gitlab/e2e_testing_deploy/e2e_deploy.yml
+++ b/.gitlab/e2e_testing_deploy/e2e_deploy.yml
@@ -223,3 +223,17 @@ deploy_windows_testing-a7-fips:
       $OMNIBUS_PACKAGE_DIR s3://$WIN_S3_BUCKET/$WINDOWS_TESTING_S3_BUCKET
       --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers
       full=id=3a6e02b08553fd157ae3fb918945dd1eaae5a1aa818940381ef07a430cf25732
+
+export_testing_public_key:
+  rules:
+    - !reference [.manual]
+  stage: e2e_deploy
+  image: registry.ddbuild.io/ci/datadog-agent-buildimages/gitlab_agent_deploy$CI_IMAGE_GITLAB_AGENT_DEPLOY_SUFFIX:$CI_IMAGE_GITLAB_AGENT_DEPLOY
+  tags: ["arch:amd64"]
+  script:
+    - *setup_signing
+    - /usr/bin/gpg-vault export-public-key $DEB_GPG_KEY_ID > gpg-testing-public-key.asc
+  artifacts:
+    paths:
+      - gpg-testing-public-key.asc
+    expire_in: 1 day
