--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -191,8 +191,8 @@ variables:
   CI_IMAGE_RPM_ARM64_SUFFIX: "_test_only"
   CI_IMAGE_RPM_ARMHF: v70664872-3a61ff42
   CI_IMAGE_RPM_ARMHF_SUFFIX: "_test_only"
-  CI_IMAGE_WIN_LTSC2022_X64: v68287210-66c494d7
-  CI_IMAGE_WIN_LTSC2022_X64_SUFFIX: ""
+  CI_IMAGE_WIN_LTSC2022_X64: v70664872-3a61ff42
+  CI_IMAGE_WIN_LTSC2022_X64_SUFFIX: "_test_only"
 
   DATADOG_AGENT_EMBEDDED_PATH: /opt/datadog-agent/embedded
   DEB_GPG_KEY_ID: c0962c7d
