--- a/.gitlab/lint/linux.yml
+++ b/.gitlab/lint/linux.yml
@@ -26,22 +26,22 @@
   script:
     - !reference [.retrieve_linux_go_deps]
     - !reference [.retrieve_linux_go_tools_deps]
-    - dda inv -- -e rtloader.make --install-prefix=$CI_PROJECT_DIR/dev
+    - dda inv -- -e gitlab.test
 
-.linux_lint3:
-  stage: lint
-  needs: ["go_deps", "go_tools_deps"]
-  variables:
-    FLAVORS: '--flavor base'
-    KUBERNETES_CPU_REQUEST: 16
-    KUBERNETES_MEMORY_REQUEST: 16Gi
-    KUBERNETES_MEMORY_LIMIT: 16Gi
-  script:
-    - !reference [.retrieve_linux_go_deps]
-    - !reference [.retrieve_linux_go_tools_deps]
-    - dda inv -- -e rtloader.make --install-prefix=$CI_PROJECT_DIR/dev
-    - dda inv -- -e rtloader.install
-    - dda inv -- -e install-tools
+# .linux_lint3:
+#   stage: lint
+#   needs: ["go_deps", "go_tools_deps"]
+#   variables:
+#     FLAVORS: '--flavor base'
+#     KUBERNETES_CPU_REQUEST: 16
+#     KUBERNETES_MEMORY_REQUEST: 16Gi
+#     KUBERNETES_MEMORY_LIMIT: 16Gi
+#   script:
+#     - !reference [.retrieve_linux_go_deps]
+#     - !reference [.retrieve_linux_go_tools_deps]
+#     - dda inv -- -e rtloader.make --install-prefix=$CI_PROJECT_DIR/dev
+#     - dda inv -- -e rtloader.install
+#     - dda inv -- -e install-tools
 
 .linux_x64:
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$CI_IMAGE_DEB_X64_SUFFIX:$CI_IMAGE_DEB_X64
