--- a/.gitlab/packaging/oci.yml
+++ b/.gitlab/packaging/oci.yml
@@ -93,3 +93,6 @@ ddot_oci:
   needs: ["datadog-otel-agent-x64", "datadog-otel-agent-arm64", "go_tools_deps"]
   variables:
     OCI_PRODUCT: "datadog-agent-ddot"
+  before_script:
+    - PACKAGE_VERSION="$(dda inv agent.version --url-safe)-1" || exit $?
+    - export INSTALL_DIR=/opt/datadog-agent
