Added otel-config example config

--- a/.gitlab/packaging/oci.yml
+++ b/.gitlab/packaging/oci.yml
@@ -57,6 +57,9 @@
         if [ "${OCI_PRODUCT}" = "datadog-installer" ]; then
           EXTRA_FLAGS="--installer ${INPUT_DIR}/${INSTALL_DIR}/bin/installer/installer"
         fi
+        if [ "${OCI_PRODUCT}" = "datadog-agent-ddot" ]; then
+          EXTRA_FLAGS="--configs ${INPUT_DIR}/${INSTALL_DIR}/etc/datadog-agent"
+        fi
         datadog-package create \
           --version ${PACKAGE_VERSION} \
           --package ${OCI_PRODUCT} \
